Mobile styling and spacing corrected for navbar and profiles

--- a/reservations/static/reservations/css/reservations.css
+++ b/reservations/static/reservations/css/reservations.css
@@ -1,32 +1,31 @@
-.reservation-img{
+.reservation-img {
     background: url('/media/table.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh - 164px);
-    
-}
-
-.img-container{
-    position:fixed;
-    z-index:-1;
-}
-
-.form-container{
-    z-index:2;
+    height: 100vh;
 
 }
 
-.reservation-btn{
+.img-container {
+    position: fixed;
+    z-index: -1;
+}
+
+.form-container {
+    z-index: 2;
+
+}
+
+.reservation-btn {
     border: solid grey 1px;
     font-weight: 600;
 }
 
-.res-card{
+.res-card {
     border: solid black 2px;
-    z-index:3;
+    z-index: 3;
 }
 
-.card-header{
-    background-color:rgba(248, 151, 95, 0.808);
+.card-header {
+    background-color: rgba(248, 151, 95, 0.808);
     border-bottom: solid 1px black
 }
-
